style.css
body {
  margin: 0;
  font-family: "Roboto Mono", monospace;
  font-optical-sizing: auto;
}

.App {
  text-align: center;
}

header {
  background: black;
  color: white;
  padding: 0.01rem 1.5rem;
  font-size: xx-large;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

button.login {
  font-size: large;
  background: white;
  color: black;
  border-radius: 1em;
  border: 2px solid black;
  transition: 0.5s;
}

button.login:hover {
  background: black;
  color: white;
  border: 2px solid white;
}

button.sign-up {
  font-size: large;
  background: black;
  border-radius: 1em;
  border: 2px solid white;
  transition: 0.5s;
}

button.sign-up:hover {
  color: black;
  background: white;
  border: 2px solid black;
}

nav button {
  background: #007bff;
  color: white;
  border: none;
  margin-left: 1rem;
  padding: 0.5rem 1rem;
  cursor: pointer;
}

main {
  display: grid;
  grid-template-columns: 6fr 4fr;
}

.hero {
  padding: 2rem;
  text-align:left;
}

.hero button {
  background: black;
  color: white;
  border: none;
  margin-top: 1rem;
  border-radius: 0.5em;
  padding: 0.75rem 1.5rem;
  font-size: 1.2rem;
  cursor: pointer;
}

.demo {
  display: flex;
  flex-grow: 1;
  margin-top: 2em;
  margin-right: 2em;
}

.demo > * {
  width: 40vw;
  height: 80vh;
}

